--- a/css/style.css
+++ b/css/style.css
@@ -627,7 +627,10 @@ footer a{
     margin-left: auto;
 }
 
-@media screen and (max-width:600px){
+@media screen and (max-width:768px){
+    .__left{
+        height:auto;
+    }
     .logo{
         display: none;
     }
@@ -638,6 +641,8 @@ footer a{
         display: block;
         overflow:hidden;
         cursor:pointer;
+        top: 15px;
+        right: 15px;
     }
     .__left{
         width: 40%;
@@ -645,6 +650,7 @@ footer a{
         background-color:#E5E4E4;
         z-index:100;
         margin-top: 100px;
+        box-sizing: border-box;
     }
     .__right{
         width: 100%;
@@ -771,5 +777,124 @@ footer a{
     transform: translate(150%);
     transition:all .5s ease-in;
 }
-    
 }
+@media screen and (max-width:320px){
+    .show{
+        transform:translate(149%);
+    }
+    .__left{
+        height: auto;
+    }
+    
+    .__right{
+        padding-right: 10px;
+        padding-left: 5px;
+    }
+    .__left h1{
+        font-size: 20px;
+    }
+    .gnav{
+        margin-top: 20px;
+    }
+    .how__title{
+        font-size: 22px;
+    }
+    .how_step2-1 .how__title, .how_step2-2 .how__title, .how_step2-3 .how__title, .how_step2-4 .how__title{
+        margin-top: 15px;
+    }
+    .how_step2-1{
+        height: 350px;
+    }
+    .how__desc{
+        font-size: 16px;
+        margin-left: 15px;
+    }
+    .__template .how__desc, .__original .how__desc{
+        width: 90%;
+        margin: 20px auto 0;
+    }
+    .step{
+        margin-left: 10px;
+        font-size: 30px;
+        margin-top: 20px;
+    }
+    
+    .small-step{
+        font-size: 24px;
+    }
+    
+    .choice{
+        margin-left: 7px;
+    }
+    .button{
+        font-size: 18px;
+        padding: 5px 10px;
+    }
+    .__template, .__original{
+        margin-left: 7px;
+    }
+    .slider{
+        width: 250px;
+        left: 0;
+    }
+    svg{
+        width: 250px!important;
+        height: 250px!important;
+        padding-left: 0;
+    }
+    .how_step2-1{
+        margin-bottom: 50px;
+    }
+    .how_step2-2 .step-outer{
+        width: 100%;
+    }
+    .ellipse{
+        width: 50px;
+        height: 50px;
+    }
+    .__r{
+        left: -100%;
+    }
+    .__b{
+        left: -60%;
+    }
+    .__g{
+        left: -10%;
+    }
+    .rgb-circle{
+        height: 80px;
+    }
+    .__original .how_step2-4 .ellipse{
+        width: 50px;
+        height: 50px;
+    }
+    .__original .how_step2-1{
+        margin-bottom: 50px;
+    }
+    .slider-2{
+        width: 100%;
+    }
+    .voice__item{
+        height: 250px;
+    }
+    .voice__item p{
+        margin-top: 10px;
+        font-size: 12px;
+    }
+    .footer-title{
+        font-size: 18px;
+    }
+    .footernav{
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+    .footer__right{
+        margin-top: 0;
+        margin-bottom: 0;
+        font-size: 12px;
+    }
+    footer a{
+        font-size: 10px;
+    }
+}
+    
