--- a/css/style.css
+++ b/css/style.css
@@ -238,6 +238,8 @@ body{
     width: 100%;
     z-index:-1;
     position:absolute;
+    top:0;
+    left:0;
 }
 .__template,.__original{
     margin-left: 30px;
